@@ -1,47 +1,57 @@
 package backend.speedspringstudy.product.service;
 
-import backend.speedspringstudy.product.dao.ProductDAO;
 import backend.speedspringstudy.product.dto.ProductRequestDTO;
 import backend.speedspringstudy.product.dto.ProductResponseDTO;
 import backend.speedspringstudy.product.entity.Product;
+import backend.speedspringstudy.product.exception.ProductNotFoundException;
+import backend.speedspringstudy.product.repository.ProductRepository;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 @Service
 public class ProductService {
 
-    private final ProductDAO productDAO;
+    private final ProductRepository productRepository;
 
-    public ProductService(ProductDAO productDAO) {
-        this.productDAO = productDAO;
+    public ProductService(ProductRepository productRepository) {
+        this.productRepository = productRepository;
     }
 
-    public List<ProductResponseDTO> getProductList() {
-        return productDAO.findAll().stream()
-                .map(p -> new ProductResponseDTO(p.getId(), p.getName(), p.getDescription(), p.getPrice()))
-                .collect(Collectors.toList());
+    public List<ProductResponseDTO> getProductList(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        return productRepository.findAll(pageable).stream()
+                .map(p -> new ProductResponseDTO(
+                        p.getId(),
+                        p.getName(),
+                        p.getDescription(),
+                        p.getPrice()
+                ))
+                .toList();
     }
 
-    public void postProduct(ProductRequestDTO productRequestDTO) {
+    public void postProduct(ProductRequestDTO dto) {
         Product product = new Product();
-        product.setName(productRequestDTO.getName());
-        product.setDescription(productRequestDTO.getDescription());
-        product.setPrice(productRequestDTO.getPrice());
+        product.setName(dto.name());
+        product.setDescription(dto.description());
+        product.setPrice(dto.price());
 
-        productDAO.save(product);
+        productRepository.save(product);
     }
 
-    public void putProduct(Long id, ProductRequestDTO productRequestDTO) {
-        Product product = new Product();
-        product.setName(productRequestDTO.getName());
-        product.setDescription(productRequestDTO.getDescription());
-        product.setPrice(productRequestDTO.getPrice());
+    public void putProduct(Long id, ProductRequestDTO dto) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new ProductNotFoundException());
 
-        productDAO.update(id, product);
+        product.setName(dto.name());
+        product.setDescription(dto.description());
+        product.setPrice(dto.price());
+
+        productRepository.save(product);
     }
 
     public void deleteProduct(Long id) {
-        productDAO.delete(id);
+        productRepository.deleteById(id);
     }
 }
